--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_base
-	base = 70adb1f
-	trimbase = 
+	base = db36c0a
+	trimbase = 70adb1f
 	parent = upstream
 	previous = 0c9a953
