--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_core
-	base = ddabe5c
-	trimbase = 
+	base = 41e8091
+	trimbase = ddabe5c
 	parent = upstream
 	previous = 0c9a953
