--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = perception
-	base = 75b5c4c
-	trimbase = 
+	base = faf642c
+	trimbase = 75b5c4c
 	parent = upstream
 	previous = 0c9a953
