--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robot
-	base = f68faa0
-	trimbase = 
+	base = 93d4a1f
+	trimbase = f68faa0
 	parent = upstream
 	previous = 0c9a953
