--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop
-	base = bf8de5c
-	trimbase = 
+	base = f30e068
+	trimbase = bf8de5c
 	parent = upstream
 	previous = 0c9a953
