--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = viz
-	base = eb5af7d
-	trimbase = 
+	base = 5d247ac
+	trimbase = eb5af7d
 	parent = upstream
 	previous = 0c9a953
