--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = simulators
-	base = 6f9d043
-	trimbase = 
+	base = d2955e6
+	trimbase = 6f9d043
 	parent = upstream
 	previous = 0c9a953
