--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop_full
-	base = 6f7ffff
-	trimbase = 
+	base = 347158b
+	trimbase = 6f7ffff
 	parent = upstream
 	previous = 0c9a953
