--- a/desktop/package.xml
+++ b/desktop/package.xml
@@ -1,25 +1,30 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model
+  href="http://download.ros.org/schema/package_format2.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>desktop</name>
-  <version>1.1.5</version>
+  <version>1.3.2</version>
   <description>A metapackage to aggregate several packages.</description>
-  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
+  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
   <license>BSD</license>
 
   <url type="repository">https://github.com/ros/metapackages</url>
   <url type="bugtracker">https://github.com/ros/metapackages/issues</url>
 
+  <author>Dirk Thomas</author>
+
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>robot</run_depend>
-  <run_depend>viz</run_depend>
+  <exec_depend>robot</exec_depend>
+  <exec_depend>viz</exec_depend>
 
-  <run_depend>common_tutorials</run_depend>
-  <run_depend>geometry_tutorials</run_depend>
-  <run_depend>ros_tutorials</run_depend>
-  <run_depend>roslint</run_depend>
-  <run_depend>rqt_common_plugins</run_depend>
-  <run_depend>rqt_robot_plugins</run_depend>
-  <run_depend>visualization_tutorials</run_depend>
+  <exec_depend>angles</exec_depend>
+  <exec_depend>common_tutorials</exec_depend>
+  <exec_depend>geometry_tutorials</exec_depend>
+  <exec_depend>ros_tutorials</exec_depend>
+  <exec_depend>roslint</exec_depend>
+  <exec_depend>visualization_tutorials</exec_depend>
 
   <export>
     <metapackage/>
