--- a/desktop_full/package.xml
+++ b/desktop_full/package.xml
@@ -1,19 +1,26 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model
+  href="http://download.ros.org/schema/package_format2.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>desktop_full</name>
-  <version>1.1.5</version>
+  <version>1.3.2</version>
   <description>A metapackage to aggregate several packages.</description>
-  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
+  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
   <license>BSD</license>
 
   <url type="repository">https://github.com/ros/metapackages</url>
   <url type="bugtracker">https://github.com/ros/metapackages/issues</url>
 
+  <author>Dirk Thomas</author>
+
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>desktop</run_depend>
-  <run_depend>perception</run_depend>
-  <run_depend>simulators</run_depend>
-  <run_depend>urdf_tutorial</run_depend>
+  <exec_depend>desktop</exec_depend>
+  <exec_depend>perception</exec_depend>
+  <exec_depend>simulators</exec_depend>
+
+  <exec_depend>urdf_tutorial</exec_depend>
 
   <export>
     <metapackage/>
