--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_base
-	base = c260be9
-	trimbase = 
+	base = cbc77ad
+	trimbase = c260be9
 	parent = upstream
 	previous = deff588
