--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_core
-	base = 8e17905
-	trimbase = 
+	base = 508b839
+	trimbase = 8e17905
 	parent = upstream
 	previous = deff588
