--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = perception
-	base = 8bfdba7
-	trimbase = 
+	base = 6f348a7
+	trimbase = 8bfdba7
 	parent = upstream
 	previous = deff588
