--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robot
-	base = 16f2233
-	trimbase = 
+	base = 5b07319
+	trimbase = 16f2233
 	parent = upstream
 	previous = deff588
