--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop
-	base = 589d9ef
-	trimbase = 
+	base = 09fa7ea
+	trimbase = 589d9ef
 	parent = upstream
 	previous = deff588
