--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = viz
-	base = bafe7cc
-	trimbase = 
+	base = ea75f53
+	trimbase = bafe7cc
 	parent = upstream
 	previous = deff588
