--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = simulators
-	base = 91e0125
-	trimbase = 
+	base = 7ad358d
+	trimbase = 91e0125
 	parent = upstream
 	previous = deff588
