--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop_full
-	base = 24391a0
-	trimbase = 
+	base = 1ffd8d0
+	trimbase = 24391a0
 	parent = upstream
 	previous = deff588
