--- a/package.xml
+++ b/package.xml
@@ -1,25 +1,31 @@
-<package>
+<?xml version="1.0"?>
+<?xml-model
+  href="http://download.ros.org/schema/package_format2.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="2">
   <name>robot</name>
-  <version>1.3.1</version>
+  <version>1.3.2</version>
   <description>A metapackage which extends ros_base and includes ROS libaries for any robot hardware. It may not contain any GUI dependencies.</description>
-  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
+  <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
   <license>BSD</license>
 
   <url type="repository">https://github.com/ros/metapackages</url>
   <url type="bugtracker">https://github.com/ros/metapackages/issues</url>
 
+  <author>Dirk Thomas</author>
+
   <buildtool_depend>catkin</buildtool_depend>
 
-  <run_depend>ros_base</run_depend>
+  <exec_depend>ros_base</exec_depend>
 
-  <run_depend>control_msgs</run_depend>
-  <run_depend>diagnostics</run_depend>
-  <run_depend>executive_smach</run_depend>
-  <run_depend>filters</run_depend>
-  <run_depend>geometry</run_depend>
-  <run_depend>robot_model</run_depend>
-  <run_depend>robot_state_publisher</run_depend>
-  <run_depend>xacro</run_depend>
+  <exec_depend>control_msgs</exec_depend>
+  <exec_depend>diagnostics</exec_depend>
+  <exec_depend>executive_smach</exec_depend>
+  <exec_depend>filters</exec_depend>
+  <exec_depend>geometry</exec_depend>
+  <exec_depend>robot_model</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>xacro</exec_depend>
 
   <export>
     <metapackage/>
