--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_base
-	base = 12a93f5
-	trimbase = 
+	base = 5cf29fd
+	trimbase = 12a93f5
 	parent = upstream
 	previous = deff588
