--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_core
-	base = 8ea2e2f
-	trimbase = 
+	base = e1a726f
+	trimbase = 8ea2e2f
 	parent = upstream
 	previous = deff588
