--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = perception
-	base = aca19a0
-	trimbase = 
+	base = fd29304
+	trimbase = aca19a0
 	parent = upstream
 	previous = deff588
