--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robot
-	base = cbfcd47
-	trimbase = 
+	base = 3e409c9
+	trimbase = cbfcd47
 	parent = upstream
 	previous = deff588
