--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop
-	base = 306461e
-	trimbase = 
+	base = e8e7344
+	trimbase = 306461e
 	parent = upstream
 	previous = deff588
