--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = viz
-	base = 6b49922
-	trimbase = 
+	base = 96e8756
+	trimbase = 6b49922
 	parent = upstream
 	previous = deff588
