--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = simulators
-	base = 1858908
-	trimbase = 
+	base = 15b8e58
+	trimbase = 1858908
 	parent = upstream
 	previous = deff588
