--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop_full
-	base = 0b7715c
-	trimbase = 
+	base = 6d0ae0e
+	trimbase = 0b7715c
 	parent = upstream
 	previous = deff588
