--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.3.0-0": ["Thu Apr 28 2016", "Dirk Thomas", "dthomas@osrfoundation.org"], "1.3.1-0": ["Mon May 08 2017", "Dirk Thomas", "dthomas@osrfoundation.org"]}
+{"1.3.0-0": ["Thu Apr 28 2016", "Dirk Thomas", "dthomas@osrfoundation.org"], "1.3.2-0": ["Wed Apr 04 2018", "Mikael Arguedas", "mikael@osrfoundation.org"], "1.3.1-0": ["Mon May 08 2017", "Dirk Thomas", "dthomas@osrfoundation.org"]}
