--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_base
-	base = f92e630
-	trimbase = 
+	base = ede8d89
+	trimbase = f92e630
 	parent = upstream
 	previous = 0885934
