--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_core
-	base = 6fdc3e7
-	trimbase = 
+	base = 9fd775e
+	trimbase = 6fdc3e7
 	parent = upstream
 	previous = 0885934
