--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = perception
-	base = 6715dd0
-	trimbase = 
+	base = 5bc620c
+	trimbase = 6715dd0
 	parent = upstream
 	previous = 0885934
