--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robot
-	base = 8000e56
-	trimbase = 
+	base = ac8babd
+	trimbase = 8000e56
 	parent = upstream
 	previous = 0885934
