--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop
-	base = 1015ae8
-	trimbase = 
+	base = 44b144b
+	trimbase = 1015ae8
 	parent = upstream
 	previous = 0885934
