--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = viz
-	base = 1fe9566
-	trimbase = 
+	base = 8dfc47f
+	trimbase = 1fe9566
 	parent = upstream
 	previous = 0885934
