--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = simulators
-	base = ff4fbc2
-	trimbase = 
+	base = aa11dc7
+	trimbase = ff4fbc2
 	parent = upstream
 	previous = 0885934
