--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop_full
-	base = b0e976a
-	trimbase = 
+	base = d179a1d
+	trimbase = b0e976a
 	parent = upstream
 	previous = 0885934
