--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ac8babd
+	base = d52a6e2
 	trimbase = 
 	parent = release/indigo/robot
-	previous = 
+	previous = ac8babd
