--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5bc620c
+	base = 9d13c51
 	trimbase = 
 	parent = release/indigo/perception
-	previous = 
+	previous = 5bc620c
