--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7e9b235
+	base = 61a1545
 	trimbase = 
 	parent = rpm/indigo/perception
-	previous = 
+	previous = 7e9b235
