--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ede8d89
+	base = bcd2c7d
 	trimbase = 
 	parent = release/indigo/ros_base
-	previous = 
+	previous = ede8d89
