--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9b64b4a
+	base = c80329c
 	trimbase = 
 	parent = rpm/indigo/ros_base
-	previous = 
+	previous = 9b64b4a
