--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9fd775e
+	base = 73d4009
 	trimbase = 
 	parent = release/indigo/ros_core
-	previous = 
+	previous = 9fd775e
