--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fc1df25
+	base = bd64106
 	trimbase = 
 	parent = rpm/indigo/ros_core
-	previous = 
+	previous = fc1df25
