--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = aa11dc7
+	base = 47b79e5
 	trimbase = 
 	parent = release/indigo/simulators
-	previous = 
+	previous = aa11dc7
