--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f8d6d18
+	base = 88587a6
 	trimbase = 
 	parent = rpm/indigo/simulators
-	previous = 
+	previous = f8d6d18
