--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8dfc47f
+	base = 8c52ab1
 	trimbase = 
 	parent = release/indigo/viz
-	previous = 
+	previous = 8dfc47f
