--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 44b144b
+	base = 1e9b229
 	trimbase = 
 	parent = release/indigo/desktop
-	previous = 
+	previous = 44b144b
