--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 459ae82
+	base = be8e04c
 	trimbase = 
 	parent = rpm/indigo/desktop
-	previous = 
+	previous = 459ae82
