--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d179a1d
+	base = 7aef841
 	trimbase = 
 	parent = release/indigo/desktop_full
-	previous = 
+	previous = d179a1d
