--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9119f5e
+	base = e99c7ba
 	trimbase = 
 	parent = rpm/indigo/desktop_full
-	previous = 
+	previous = 9119f5e
