--- a/desktop_full/package.xml
+++ b/desktop_full/package.xml
@@ -4,7 +4,7 @@
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>desktop_full</name>
-  <version>1.1.6</version>
+  <version>1.4.0</version>
   <description>A metapackage to aggregate several packages.</description>
   <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
   <license>BSD</license>
@@ -20,7 +20,7 @@
   <exec_depend>perception</exec_depend>
   <exec_depend>simulators</exec_depend>
 
-  <exec_depend>urdf_tutorial</exec_depend>
+  <exec_depend>urdf_sim_tutorial</exec_depend>
 
   <export>
     <metapackage/>
