--- a/ros_core/package.xml
+++ b/ros_core/package.xml
@@ -4,7 +4,7 @@
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>ros_core</name>
-  <version>1.1.6</version>
+  <version>1.4.0</version>
   <description>A metapackage to aggregate the packages required to use publish / subscribe, services, launch files, and other core ROS concepts.</description>
   <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
   <license>BSD</license>
@@ -20,8 +20,10 @@
   <exec_depend>cmake_modules</exec_depend>
   <exec_depend>common_msgs</exec_depend>
   <exec_depend>gencpp</exec_depend>
+  <exec_depend>geneus</exec_depend>
   <exec_depend>genlisp</exec_depend>
   <exec_depend>genmsg</exec_depend>
+  <exec_depend>gennodejs</exec_depend>
   <exec_depend>genpy</exec_depend>
   <exec_depend>message_generation</exec_depend>
   <exec_depend>message_runtime</exec_depend>
