--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 1280975
-	trimbase = 
+	trim = ros_base
+	base = 454ba24
+	trimbase = 1280975
 	parent = upstream
 	previous = b617ca6
