--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ee9fff5
-	trimbase = 
+	trim = ros_core
+	base = 3ba1726
+	trimbase = ee9fff5
 	parent = upstream
 	previous = b617ca6
