--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7459602
-	trimbase = 
+	trim = perception
+	base = 4bdc9f6
+	trimbase = 7459602
 	parent = upstream
 	previous = b617ca6
