--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e3df4c5
-	trimbase = 
+	trim = robot
+	base = 8416578
+	trimbase = e3df4c5
 	parent = upstream
 	previous = b617ca6
