--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 369f807
-	trimbase = 
+	trim = desktop
+	base = f1add31
+	trimbase = 369f807
 	parent = upstream
 	previous = b617ca6
