--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7c9f44e
-	trimbase = 
+	trim = desktop_full
+	base = afe05d4
+	trimbase = 7c9f44e
 	parent = upstream
 	previous = b617ca6
