--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e8dd8c8
-	trimbase = 
+	trim = simulators
+	base = dbfc8e9
+	trimbase = e8dd8c8
 	parent = upstream
 	previous = b617ca6
