--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = dabbab4
-	trimbase = 
+	trim = viz
+	base = b144f56
+	trimbase = dabbab4
 	parent = upstream
 	previous = b617ca6
