--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dbfc8e9
+	base = f7c12d9
 	trimbase = 
 	parent = release/melodic/simulators
-	previous = 
+	previous = dbfc8e9
