--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 54d28ab
+	base = 7132c85
 	trimbase = 
 	parent = debian/melodic/simulators
-	previous = 
+	previous = 54d28ab
