--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = afe05d4
+	base = 567b0c2
 	trimbase = 
 	parent = release/melodic/desktop_full
-	previous = 
+	previous = afe05d4
