--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 96de451
+	base = 940c176
 	trimbase = 
 	parent = debian/melodic/desktop_full
-	previous = 
+	previous = 96de451
