--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 454ba24
+	base = 4acd6eb
 	trimbase = 
 	parent = release/melodic/ros_base
-	previous = 
+	previous = 454ba24
