--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0cf14a2
+	base = b1dde1c
 	trimbase = 
 	parent = debian/melodic/ros_base
-	previous = 
+	previous = 0cf14a2
