--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b144f56
+	base = 417bbb2
 	trimbase = 
 	parent = release/melodic/viz
-	previous = 
+	previous = b144f56
