--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5cc3fba
+	base = 3f2574c
 	trimbase = 
 	parent = debian/melodic/viz
-	previous = 
+	previous = 5cc3fba
