--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 47955ac
+	base = 63031a7
 	trimbase = 
 	parent = debian/melodic/ros_core
-	previous = 
+	previous = 47955ac
