--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 49c130d
+	base = e9cfb7c
 	trimbase = 
 	parent = debian/melodic/perception
-	previous = 
+	previous = 49c130d
