--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 710c4b5
+	base = b5cd169
 	trimbase = 
 	parent = debian/melodic/robot
-	previous = 
+	previous = 710c4b5
