--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 97e114c
+	base = 2c2f4b8
 	trimbase = 
 	parent = debian/melodic/desktop
-	previous = 
+	previous = 97e114c
