--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 64521e8
+	base = f1cc7e4
 	trimbase = 
 	parent = debian/melodic/simulators
-	previous = 
+	previous = 64521e8
