--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6755707
+	base = 8bf5eae
 	trimbase = 
 	parent = debian/melodic/desktop_full
-	previous = 
+	previous = 6755707
