--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c717b42
+	base = 44dd6ca
 	trimbase = 
 	parent = debian/melodic/ros_base
-	previous = 
+	previous = c717b42
