--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1030bf2
+	base = 3cb01fe
 	trimbase = 
 	parent = debian/melodic/viz
-	previous = 
+	previous = 1030bf2
