--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = aec7fae
+	base = ad3aaec
 	trimbase = 
 	parent = debian/melodic/ros_core
-	previous = 
+	previous = aec7fae
