--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d67a9aa
+	base = c912e86
 	trimbase = 
 	parent = debian/melodic/perception
-	previous = 
+	previous = d67a9aa
