--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 92a4aac
+	base = 085365c
 	trimbase = 
 	parent = debian/melodic/robot
-	previous = 
+	previous = 92a4aac
