--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9ca9979
+	base = 6c67077
 	trimbase = 
 	parent = debian/melodic/desktop
-	previous = 
+	previous = 9ca9979
