--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9637c17
+	base = cdf8fc1
 	trimbase = 
 	parent = rpm/melodic/simulators
-	previous = 
+	previous = 9637c17
