--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e9e060e
+	base = 37ff2c2
 	trimbase = 
 	parent = rpm/melodic/desktop_full
-	previous = 
+	previous = e9e060e
