--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d4afabc
+	base = 0915c55
 	trimbase = 
 	parent = rpm/melodic/ros_base
-	previous = 
+	previous = d4afabc
