--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3ba1726
+	base = d8fd094
 	trimbase = 
 	parent = release/melodic/ros_core
-	previous = 
+	previous = 3ba1726
