--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c658c89
+	base = 16c5a73
 	trimbase = 
 	parent = rpm/melodic/ros_core
-	previous = 
+	previous = c658c89
