--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4bdc9f6
+	base = 5e8a442
 	trimbase = 
 	parent = release/melodic/perception
-	previous = 
+	previous = 4bdc9f6
