--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5f2b884
+	base = 8ce68ad
 	trimbase = 
 	parent = rpm/melodic/perception
-	previous = 
+	previous = 5f2b884
