--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8416578
+	base = a519e79
 	trimbase = 
 	parent = release/melodic/robot
-	previous = 
+	previous = 8416578
