--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f1add31
+	base = b9f02d2
 	trimbase = 
 	parent = release/melodic/desktop
-	previous = 
+	previous = f1add31
