--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8f4c3b8
+	base = d67a0a7
 	trimbase = 
 	parent = rpm/melodic/desktop
-	previous = 
+	previous = 8f4c3b8
