--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_base
-	base = 409b81e
-	trimbase = 
+	base = 3074034
+	trimbase = 409b81e
 	parent = upstream
 	previous = 53cd343
