--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros_core
-	base = 9594816
-	trimbase = 
+	base = d2977de
+	trimbase = 9594816
 	parent = upstream
 	previous = 53cd343
