--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = perception
-	base = 6561f69
-	trimbase = 
+	base = 72e61a6
+	trimbase = 6561f69
 	parent = upstream
 	previous = 53cd343
