--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = robot
-	base = a93bd80
-	trimbase = 
+	base = 237f709
+	trimbase = a93bd80
 	parent = upstream
 	previous = 53cd343
