--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop
-	base = 6623a0b
-	trimbase = 
+	base = d19f4d8
+	trimbase = 6623a0b
 	parent = upstream
 	previous = 53cd343
