--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = desktop_full
-	base = 737527a
-	trimbase = 
+	base = 25d5cc9
+	trimbase = 737527a
 	parent = upstream
 	previous = 53cd343
