--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = simulators
-	base = 439fe2e
-	trimbase = 
+	base = 9818c80
+	trimbase = 439fe2e
 	parent = upstream
 	previous = 53cd343
