--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = viz
-	base = 3b801f4
-	trimbase = 
+	base = 9323e15
+	trimbase = 3b801f4
 	parent = upstream
 	previous = 53cd343
