--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"1.4.0-0": ["Thu May 10 2018", "Mikael Arguedas", "mikael@osrfoundation.org"]}
+{"1.4.0-0": ["Thu May 10 2018", "Mikael Arguedas", "mikael@osrfoundation.org"], "1.4.1-0": ["Mon May 21 2018", "Mikael Arguedas", "mikael@osrfoundation.org"]}
