--- a/desktop/package.xml
+++ b/desktop/package.xml
@@ -4,7 +4,7 @@
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>desktop</name>
-  <version>1.4.1</version>
+  <version>1.5.0</version>
   <description>A metapackage to aggregate several packages.</description>
   <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
   <license>BSD</license>
@@ -22,6 +22,7 @@
   <exec_depend>angles</exec_depend>
   <exec_depend>common_tutorials</exec_depend>
   <exec_depend>geometry_tutorials</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
   <exec_depend>ros_tutorials</exec_depend>
   <exec_depend>roslint</exec_depend>
   <exec_depend>urdf_tutorial</exec_depend>
