--- a/robot/package.xml
+++ b/robot/package.xml
@@ -4,7 +4,7 @@
   schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="2">
   <name>robot</name>
-  <version>1.4.1</version>
+  <version>1.5.0</version>
   <description>A metapackage which extends ros_base and includes ROS libaries for any robot hardware. It may not contain any GUI dependencies.</description>
   <maintainer email="mikael@osrfoundation.org">Mikael Arguedas</maintainer>
   <license>BSD</license>
@@ -25,7 +25,8 @@
   <exec_depend>geometry</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>kdl_parser</exec_depend>
-  <exec_depend>kdl_parser_py</exec_depend>
+  <!-- Ignore kdl_parser_py until it becomes usable in Ubuntu Focal -->
+  <!--<exec_depend>kdl_parser_py</exec_depend>-->
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>urdf</exec_depend>
   <exec_depend>urdf_parser_plugin</exec_depend>
