--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 4c31a1ad
-	trimbase = 
+	trim = ros_base
+	base = f79d2658
+	trimbase = 4c31a1ad
 	parent = upstream
 	previous = 6191c027
