--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f1bf7103
-	trimbase = 
+	trim = ros_core
+	base = a467c471
+	trimbase = f1bf7103
 	parent = upstream
 	previous = 6191c027
