--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 47f3515b
-	trimbase = 
+	trim = perception
+	base = cd18e93e
+	trimbase = 47f3515b
 	parent = upstream
 	previous = 6191c027
