--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0991a15d
-	trimbase = 
+	trim = robot
+	base = 8561c4d9
+	trimbase = 0991a15d
 	parent = upstream
 	previous = 6191c027
