--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 21d2ab74
-	trimbase = 
+	trim = desktop
+	base = 550fbfe6
+	trimbase = 21d2ab74
 	parent = upstream
 	previous = 6191c027
