--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 43b2502a
-	trimbase = 
+	trim = viz
+	base = 2a934ef6
+	trimbase = 43b2502a
 	parent = upstream
 	previous = 6191c027
