--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 47c45429
-	trimbase = 
+	trim = simulators
+	base = eb92bb93
+	trimbase = 47c45429
 	parent = upstream
 	previous = 6191c027
