--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ea287f32
-	trimbase = 
+	trim = desktop_full
+	base = b9ca0fec
+	trimbase = ea287f32
 	parent = upstream
 	previous = 6191c027
