--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2a934ef6
+	base = e1f3fa14
 	trimbase = 
 	parent = release/noetic/viz
-	previous = 
+	previous = 2a934ef6
