--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87df5ff0
+	base = 152bf2f1
 	trimbase = 
 	parent = debian/noetic/viz
-	previous = 
+	previous = 87df5ff0
