--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 71f94581
+	base = 36084fce
 	trimbase = 
 	parent = debian/noetic/desktop_full
-	previous = 
+	previous = 71f94581
