--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a467c471
+	base = f11bbf2d
 	trimbase = 
 	parent = release/noetic/ros_core
-	previous = 
+	previous = a467c471
