--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 616bdb1c
+	base = 361353d3
 	trimbase = 
 	parent = debian/noetic/ros_core
-	previous = 
+	previous = 616bdb1c
