--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8805c974
+	base = 58eb3ddb
 	trimbase = 
 	parent = debian/noetic/simulators
-	previous = 
+	previous = 8805c974
