--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f79d2658
+	base = 776caa50
 	trimbase = 
 	parent = release/noetic/ros_base
-	previous = 
+	previous = f79d2658
