--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c0175a41
+	base = 66a5a40e
 	trimbase = 
 	parent = debian/noetic/ros_base
-	previous = 
+	previous = c0175a41
