--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8561c4d9
+	base = 10d5d3e8
 	trimbase = 
 	parent = release/noetic/robot
-	previous = 
+	previous = 8561c4d9
