--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff7e6f52
+	base = 9f2168a4
 	trimbase = 
 	parent = debian/noetic/robot
-	previous = 
+	previous = ff7e6f52
