--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cd18e93e
+	base = f1794b57
 	trimbase = 
 	parent = release/noetic/perception
-	previous = 
+	previous = cd18e93e
