--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 55eee883
+	base = d76ce31c
 	trimbase = 
 	parent = debian/noetic/perception
-	previous = 
+	previous = 55eee883
