--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 550fbfe6
+	base = 19f1d296
 	trimbase = 
 	parent = release/noetic/desktop
-	previous = 
+	previous = 550fbfe6
