--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f036a13e
+	base = 02438fd1
 	trimbase = 
 	parent = debian/noetic/desktop
-	previous = 
+	previous = f036a13e
