--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 36b953f6
+	base = 9a5e9672
 	trimbase = 
 	parent = debian/noetic/viz
-	previous = 
+	previous = 36b953f6
