--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6edbac39
+	base = 78485759
 	trimbase = 
 	parent = debian/noetic/desktop_full
-	previous = 
+	previous = 6edbac39
