--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2e0d79a4
+	base = 409430a2
 	trimbase = 
 	parent = debian/noetic/ros_core
-	previous = 
+	previous = 2e0d79a4
