--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2442e291
+	base = 2101671b
 	trimbase = 
 	parent = debian/noetic/simulators
-	previous = 
+	previous = 2442e291
