--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d91be678
+	base = 4a65f84f
 	trimbase = 
 	parent = debian/noetic/ros_base
-	previous = 
+	previous = d91be678
