--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c430d292
+	base = 0292d48a
 	trimbase = 
 	parent = debian/noetic/robot
-	previous = 
+	previous = c430d292
