--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bbc741f2
+	base = 0979ad4d
 	trimbase = 
 	parent = debian/noetic/perception
-	previous = 
+	previous = bbc741f2
