--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c56a393f
+	base = 0306f2d6
 	trimbase = 
 	parent = debian/noetic/desktop
-	previous = 
+	previous = c56a393f
