--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2a934ef6
+	base = 1de6c54f
 	trimbase = 
 	parent = release/noetic/viz
-	previous = 
+	previous = 2a934ef6
