--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b9ca0fec
+	base = c9bd4627
 	trimbase = 
 	parent = release/noetic/desktop_full
-	previous = 
+	previous = b9ca0fec
