--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2693a9bf
+	base = e3b530e5
 	trimbase = 
 	parent = rpm/noetic/desktop_full
-	previous = 
+	previous = 2693a9bf
