--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e391f186
+	base = 498d2b5f
 	trimbase = 
 	parent = rpm/noetic/ros_core
-	previous = 
+	previous = e391f186
