--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eb92bb93
+	base = b506ec6d
 	trimbase = 
 	parent = release/noetic/simulators
-	previous = 
+	previous = eb92bb93
