--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c419d44c
+	base = 6764da5a
 	trimbase = 
 	parent = rpm/noetic/simulators
-	previous = 
+	previous = c419d44c
