--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6ce28398
+	base = dda49220
 	trimbase = 
 	parent = rpm/noetic/ros_base
-	previous = 
+	previous = 6ce28398
