--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 220ddb30
+	base = 7c09b655
 	trimbase = 
 	parent = rpm/noetic/robot
-	previous = 
+	previous = 220ddb30
