--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a987ca92
+	base = 127c532b
 	trimbase = 
 	parent = rpm/noetic/perception
-	previous = 
+	previous = a987ca92
