--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1ce8c6e5
+	base = fcbfd9d1
 	trimbase = 
 	parent = rpm/noetic/desktop
-	previous = 
+	previous = 1ce8c6e5
